--- a/.github/workflows/features_hourly.yml
+++ b/.github/workflows/features_hourly.yml
@@ -13,38 +13,38 @@ jobs:
     runs-on: ubuntu-latest
 
     steps:
-      # 1) get repo
+      # get repo
       - name: Checkout repo
         uses: actions/checkout@v4
 
-      # 2) Python setup
+      # Python setup
       - name: Set up Python
         uses: actions/setup-python@v5
         with:
           python-version: "3.11"
 
-      # 3) install project deps
+      # install project deps
       - name: Install dependencies
         run: |
           python -m pip install --upgrade pip setuptools wheel
           pip install -r requirements.txt
 
-      # 4) env needed by ingest.py
+      # env needed by ingest.py
       - name: Set environment vars
         run: |
           echo "OPENAQ_API_KEY=${{ secrets.OPENAQ_API_KEY }}" >> $GITHUB_ENV
           echo "CITY=Karachi" >> $GITHUB_ENV
           echo "LOOKBACK_DAYS=90" >> $GITHUB_ENV
 
-      # 5) run pipeline
+      # run pipeline
       - name: Ingest latest data
         run: python src/ingest.py
 
       - name: Build features
         run: python src/features.py
 
-      # 6) commit updated data/features/ if something changed
-      - name: Commit updated features
-        uses: stefanzweifel/git-auto-commit-action@v5
-        with:
-          commit_message: "CI/CD auto commits"
+      # commit updated data/features/ if something changed
+      # - name: Commit updated features
+      #   uses: stefanzweifel/git-auto-commit-action@v5
+      #   with:
+      #     commit_message: "CI/CD auto commits"
